Micro tab: Fixed: Partially submerged particles only move one direction and get stuck
Micro tab: Fixed: The sugar particles can get stuck after you remove the max amount of solution from the drain
Micro tab: Fixed: The ions and molecules can fly out of the solution when you add solute
# 0.00.82 (54873) Aug 4, 2011
Micro tab: Prevent dissolving from crystals during evaporation
Micro tab: Removed the "dash mark" near the play button
# 0.00.81 (54857) Aug 4, 2011
Micro tab: Fixed: Particles get stuck in the corners of the beaker
# 0.00.80 (54855) Aug 4, 2011
Micro tab: If a crystal dissolves down to 1 particle, then convert the 1-particle crystal to dissolved solute
Micro tab: Require two particles for forming a crystal instead of one
# 0.00.79 (54852) Aug 3, 2011
Micro tab: Made NO3- concentration bar blue because it represents a negative ion
Micro tab: Fixed exponent for the water/solution volume readout and show no water as 0L
Micro tab: Combined the "remove solute 1" and "remove solute 2" buttons into one "remove solutes" button
# 0.00.78 (54820) Aug 3, 2011
Micro tab: Dissolve particles from the edges instead of the center of the crystal
Micro tab: Maintain constituent ratio according to chemical formula during dissolve
# 0.00.77 (54806) Aug 3, 2011
Water tab: added more proguard keep statements
Water tab: Fixed: Sucrose 3D stick view is broken and there are many exceptions
# 0.00.76 (54799) Aug 3, 2011
Water tab: Fixed: Sucrose 3D view no longer appears
# 0.00.75 (54796) Aug 3, 2011
Micro tab: Sometimes create new crystals instead of only growing one large crystal
Micro tab: Fixed: Ethanol concentration should only count ethanol in solution, not ethanol in the air
Micro tab: Improved speed at which particles move to the drain faucet
Fixed: Exception on startup "multiple clocks are running"
Micro tab: Fixed: "Remove sucrose" button doesn't remove sucrose crystals
# 0.00.74 (54730) Aug 1, 2011